tests/baselines/reference/superWithTypeArgument.errors.txt
tests/cases/compiler/superWithTypeArgument.ts(6,5): error TS2377: Constructors for derived classes must contain a 'super' call.
tests/cases/compiler/superWithTypeArgument.ts(7,9): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
tests/cases/compiler/superWithTypeArgument.ts(7,14): error TS1034: 'super' must be followed by an argument list or member access.


==== tests/cases/compiler/superWithTypeArgument.ts (3 errors) ====
    class C {
        
    }
    
    class D<T> extends C {
        constructor() {
        ~~~~~~~~~~~~~~~
            super<T>();
    ~~~~~~~~~~~~~~~~~~~
            ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
                 ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }